--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,16 @@ server.ssl.key-store-password=1003704633
 # The alias mapped to the certificate
 server.ssl.key-alias=ecikeypair
 server.ssl.enabled=true
+
+
+spring.application.name=AREP-Taller-6
+spring.datasource.url=jdbc:mysql://54.86.125.63:3306/taller?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=Mauricio
+spring.datasource.password=1003704633
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.web.resources.static-locations=classpath:/static/
