--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,25 @@
 # In resources/application.properties
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/ecikeystore.p12
+#server.ssl.key-store=classpath:keystore/ecikeystore.p12
 # The password used to generate the certificate
-server.ssl.key-store-password=1003704633
+#server.ssl.key-store-password=1003704633
 # The alias mapped to the certificate
-server.ssl.key-alias=ecikeypair
-server.ssl.enabled=true
+#server.ssl.key-alias=ecikeypair
+#server.ssl.enabled=true
+
+#server.port=8443
+#server.ssl.key-store=/etc/letsencrypt/live/spring-framework-server.duckdns.org/fullchain.pem
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-password=changeit
+#server.ssl.key-alias=tomcat
+#server.ssl.key-password=changeit
+
 
 
 spring.application.name=AREP-Taller-6
-spring.datasource.url=jdbc:mysql://54.86.125.63:3306/taller?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://54.210.2.108:3306/taller?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=Mauricio
 spring.datasource.password=1003704633
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
